<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="absolutely_free">absolutely free</string>
    <string name="access_desc">Enabling accessibility will help you to autofill the details in the IRCTC Rail Connect app</string>
    <string name="action_settings">Settings</string>
    <string name="address_details">Address Details</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_3">Address Line 3</string>
    <string name="advanced">Advanced</string>
    <string name="age">Age</string>
    <string name="agent_booking_survey">Agent Booking Survey</string>
    <string name="and_get_one_extra_ticket">And get one extra ticket</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="answer">If you lost your password please contact <a href="https://www.youtube.com/watch?v=Lo5DDS5Dk-c" target="_top">https://www.youtube.com/watch?v=Lo5DDS5Dk-c</a></string>
    <string name="app_name">Quick Tatkal</string>
    <string name="app_name_3">Quick TatKal</string>
    <string name="app_title">Mycomputer12@</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="area_locality">Area / Locality</string>
    <string name="assist">Assist</string>
    <string name="assist_logo">Paytm Logo</string>
    <string name="auto_date_time_chk">For Tatkal ticket booking, it is recommended that you have the Automatic Date Time option checked in Settings for better accuracy. Do you want to change it now?</string>
    <string name="auto_upgradation">Consider Auto upgradation</string>
    <string name="autoclick1">Automatically click AVAILABILITY button at 11:00 AM</string>
    <string name="autoclick2">I will click AVAILABILITY button manually</string>
    <string name="autoclick3">Click AVAILABILITY button as soon as the page loads</string>
    <string name="autoclick4">Automatically click AVAILABILITY button at 10:00 AM</string>
    <string name="autoclick5">Automatically click AVAILABILITY button at 8:00 AM</string>
    <string name="autofill_security">Autofill Security Question</string>
    <string name="automatic_date_time">Automatic Date Time</string>
    <string name="automatic_otp">OTP will be automatically entered in %1$ds to avoid captcha after payment</string>
    <string name="axisbank">\@axisbank</string>
    <string name="bank">Bank</string>
    <string name="bank_name">Bank Name</string>
    <string name="banking_type">Banking Type</string>
    <string name="bed_roll">Bed Roll</string>
    <string name="best_of_luck">Best of luck for your ticket</string>
    <string name="boarding_stn">Boarding Stn</string>
    <string name="book_now">Book Now</string>
    <string name="booking_opt_1">Book, only if all berths are allotted in same coach.</string>
    <string name="booking_opt_2">Book, only if at least 1 lower berth is allotted.</string>
    <string name="booking_opt_3">Book, only if 2 lower berths are allotted.</string>
    <string name="booking_option">Booking Option</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="buy_tickets">Buy Tickets</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="cant_open_date_time">Cannot open Date &amp; Time Settings. You can set Automatic Date-Time option on manually from Settings</string>
    <string name="caps_lock_info">"IRCTC Captcha will be automatically entered in Caps. You don't need to toggle caps lock"</string>
    <string name="card_no">Card Number</string>
    <string name="card_no_16_digit">Please enter a valid 16 digit Card No</string>
    <string name="card_type">Card Type</string>
    <string name="card_validity">Card Validity</string>
    <string name="cash_card_wallets">Wallets / Cash Card</string>
    <string name="change_language">Change Language</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_network">Check your network connection and try again</string>
    <string name="child_details">Child Details</string>
    <string name="city">City</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_here">Click here</string>
    <string name="coach_id">Coach Id</string>
    <string name="coach_preferred">Coach Preferred</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">72863a1ddc3c46a2a845fd442884ba29</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="coming_soon">Coming soon in next update...</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="debit_card_with_pin">Debit Card with PIN</string>
    <string name="info_secured">* Your complete payment information is encrypted and secured</string>
    <string name="irctc_ewallet">IRCTC eWallet</string>
    <string name="irctc_ipay">IRCTC iPay (Credit Card/Debit Card/UPI)</string>
    <string name="irctc_prepaid">Multiple Payment Service</string>
    <string name="manual_payment">I will fill payment information manually</string>
    <string name="menu_gallery">Train availability</string>
    <string name="menu_home">Home</string>
    <string name="menu_slideshow">PNR status</string>
    <string name="miscellaneaous">Miscellaneaous</string>
    <string name="mobile_no">Mobile No</string>
    <string name="mode">Payment</string>
    <string name="net_banking">Net Banking</string>
    <string name="none">None</string>
    <string name="only_confirm_berths">Book only if confirm berths are allotted</string>
    <string name="opted_for_vikalp">Opted for VIKALP</string>
    <string name="pay_on_delivery">Pay-On-Delivery/Pay later</string>
    <string name="payment_gateway_credit_card">Payment Gateway / Credit Card / Debit Card</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_selection_time">Payment selection time</string>
    <string name="running_status">Running Status</string>
    <string name="scan_pay">Bharat QR / Scan &amp; Pay</string>
    <string name="travel_insurance">Travel Insurance</string>
    <string name="upi_bhim_ussd">BHIM/ UPI/ USSD</string>
</resources>