<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/primary_color"
    android:padding="10.0dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <TextView
        android:textSize="20.0sp"
        android:textStyle="bold"
        android:textColor="#ffffffff"
        android:id="@id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miscellaneaous"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10.0dip" />
    <RelativeLayout
        android:background="@drawable/gradient_rectangle"
        android:paddingBottom="20.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.0dip"
        android:layout_below="@id/textView36">
        <CheckBox
            android:textSize="16.0sp"
            android:id="@id/checkBox4"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:button="@drawable/checkbox_button"
            android:text="@string/opted_for_vikalp"
            android:layout_marginStart="20.0dip"
            android:layout_alignParentStart="true" />
        <CheckBox
            android:textSize="16.0sp"
            android:textColor="#ffffffff"
            android:id="@id/checkBox6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:button="@drawable/checkbox_button"
            android:text="@string/auto_upgradation"
            android:paddingStart="10.0dip"
            android:layout_marginStart="20.0dip"
            android:layout_alignStart="@id/checkBox4" />
        <CheckBox
            android:textSize="16.0sp"
            android:textColor="#ffffffff"
            android:id="@id/checkBox7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:button="@drawable/checkbox_button"
            android:text="@string/only_confirm_berths"
            android:layout_below="@id/checkBox6"
            android:paddingStart="10.0dip"
            android:layout_alignStart="@id/checkBox6" />
        <TextView
            android:textSize="16.0sp"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:id="@id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:text="@string/travel_insurance"
            android:layout_below="@id/checkBox7"
            android:layout_marginStart="20.0dip"
            android:layout_alignParentStart="true" />
        <RadioGroup
            android:orientation="horizontal"
            android:id="@id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7.0dip"
            android:layout_below="@id/checkBox7"
            android:layout_marginStart="8.0dip"
            android:layout_toEndOf="@id/textView17">
            <RadioButton
                android:textStyle="bold"
                android:textColor="#ffffffff"
                android:id="@id/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Yes"
                android:layout_weight="1.0"
                android:buttonTint="#ff9c5df7" />
            <RadioButton
                android:textStyle="bold"
                android:textColor="#ffffffff"
                android:id="@id/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No"
                android:layout_weight="1.0"
                android:layout_marginStart="15.0dip"
                android:buttonTint="#ff9c5df7" />
        </RadioGroup>
        <TextView
            android:textSize="16.0sp"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:id="@id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:text="@string/booking_option"
            android:layout_below="@id/textView17"
            android:layout_marginEnd="5.0dip"
            android:layout_alignStart="@id/textView17" />
        <RadioGroup
            android:id="@id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:weightSum="1.0"
            android:layout_below="@id/textView15"
            android:layout_marginEnd="10.0dip"
            android:layout_alignStart="@id/textView15">
            <RadioButton
                android:textSize="13.0sp"
                android:textColor="#ffffffff"
                android:id="@id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/none"
                android:buttonTint="#ff9c5df7" />
            <RadioButton
                android:textSize="13.0sp"
                android:textColor="#ffffffff"
                android:id="@id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booking_opt_1"
                android:buttonTint="#ff9c5df7" />
            <RadioButton
                android:textSize="13.0sp"
                android:textColor="#ffffffff"
                android:id="@id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booking_opt_2"
                android:buttonTint="#ff9c5df7" />
            <RadioButton
                android:textSize="13.0sp"
                android:textColor="#ffffffff"
                android:id="@id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booking_opt_3"
                android:buttonTint="#ff9c5df7" />
        </RadioGroup>
        <CheckBox
            android:textSize="16.0sp"
            android:textColor="#ffffffff"
            android:id="@id/checkBox8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:button="@drawable/checkbox_button"
            android:text="@string/coach_preferred"
            android:layout_below="@id/radioGroup"
            android:paddingStart="10.0dip"
            android:layout_alignStart="@id/textView15" />
        <EditText
            android:enabled="false"
            android:textColor="#ffffffff"
            android:id="@id/editText13"
            android:background="@drawable/free_tickets_bg"
            android:paddingLeft="10.0dip"
            android:paddingTop="3.0dip"
            android:paddingRight="10.0dip"
            android:paddingBottom="3.0dip"
            android:layout_width="wrap_content"
            android:layout_height="40.0dip"
            android:layout_marginTop="10.0dip"
            android:hint="@string/coach_id"
            android:ems="10"
            android:layout_below="@id/checkBox8"
            android:inputType="textPersonName"
            android:paddingStart="10.0dip"
            android:paddingEnd="10.0dip"
            android:layout_alignStart="@id/textView17" />
        <TextView
            android:textSize="13.0sp"
            android:textColor="#ffffffff"
            android:id="@id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:text="@string/mobile_no"
            android:layout_below="@id/editText13"
            android:layout_marginStart="10.0dip"
            android:layout_alignStart="@id/checkBox8" />
        <EditText
            android:textColor="#ffffffff"
            android:id="@id/editText15"
            android:background="@drawable/free_tickets_bg"
            android:paddingLeft="10.0dip"
            android:paddingTop="3.0dip"
            android:paddingRight="10.0dip"
            android:paddingBottom="3.0dip"
            android:layout_width="wrap_content"
            android:layout_height="40.0dip"
            android:layout_marginTop="5.0dip"
            android:ems="10"
            android:maxLength="10"
            android:layout_below="@id/textView16"
            android:inputType="number"
            android:paddingStart="10.0dip"
            android:paddingEnd="10.0dip"
            android:layout_toEndOf="@id/textView16"
            android:layout_alignStart="@id/textView17" />
        <TextView
            android:textSize="13.0sp"
            android:textColor="#ffffffff"
            android:id="@id/pmTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:text="@string/mode"
            android:layout_below="@id/editText15"
            android:layout_alignStart="@id/textView16" />
        <Spinner
            android:entries="@array/payment_mode"
            android:id="@id/paymentMode"
            android:background="@drawable/spinner_theme"
            android:layout_width="wrap_content"
            android:layout_height="40.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_below="@id/pmTv"
            android:layout_marginEnd="20.0dip"
            android:layout_alignStart="@id/editText15" />
        <CheckBox
            android:textSize="16.0sp"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:id="@id/autofillCaptcha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:button="@drawable/checkbox_button"
            android:text="Autofill Captchas"
            android:layout_below="@id/paymentMode"
            android:paddingStart="10.0dip"
            android:layout_alignStart="@id/textView17" />
        <EditText
            android:textSize="16.0sp"
            android:textStyle="bold"
            android:textColor="#ffaaaaaa"
            android:id="@id/captcha_demo"
            android:background="@drawable/custom_edittext_black"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="🎞 Demo"
            android:cursorVisible="false"
            android:layout_alignTop="@id/autofillCaptcha"
            android:layout_centerInParent="true"
            android:paddingStart="8.0dip"
            android:paddingEnd="8.0dip"
            android:layout_marginStart="10.0dip"
            android:layout_toEndOf="@id/autofillCaptcha" />
    </RelativeLayout>
</RelativeLayout>